# cpp-dev-template

./: CMakeLists.txt  README.md  docker-compose.yml
.devcontainer/: cpp.Dockerfile  devcontainer.json
cli/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  add.h
tests/: CMakeLists.txt  add_test.cc
